NEW: dynamic searc implemented